--- a/Problems/Greeting/task-info.yaml
+++ b/Problems/Greeting/task-info.yaml
@@ -5,5 +5,5 @@ files:
   text: fun greetNeo() = greetUser(...)
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/7863#comment
-status: Unchecked
+status: Solved
 record: -1
